--- a/app/src/main/res/layout/edit_details_fragment.xml
+++ b/app/src/main/res/layout/edit_details_fragment.xml
@@ -21,7 +21,7 @@
             app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
-            android:id="@+id/edit_description"
+            android:id="@+id/edit_location_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="3"
@@ -34,11 +34,25 @@
             android:textAlignment="center"
             app:layout_constraintTop_toTopOf="@id/map"/>
 
+        <TextView
+            android:id="@+id/basic_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLines="3"
+            android:padding="8dp"
+            android:text="Basic information:"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:textColor="#444"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/map" />
+
         <android.support.design.widget.TextInputLayout
             android:id="@+id/titleInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/map">
+            app:layout_constraintTop_toBottomOf="@id/basic_info">
 
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
@@ -61,6 +75,20 @@
                 android:hint="Description"
                 android:inputType="text"
                 android:text="@={viewmodel.description}"/>
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/dateInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/descriptionInputLayout">
+
+            <uk.ac.shef.com4510.widgets.TextInputDatePicker
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Date"
+                app:date="@={viewmodel.date}" />
 
         </android.support.design.widget.TextInputLayout>
 
