Extract strings from view files and improve formatting for exif fields.

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -71,7 +71,7 @@
                     android:layout_height="wrap_content"
                     android:maxLines="3"
                     android:padding="8dp"
-                    android:text="Basic information:"
+                    android:text="@string/basic_info"
                     android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                     android:textColor="#444"
                     android:textSize="18sp"
@@ -131,7 +131,7 @@
                     android:layout_height="wrap_content"
                     android:maxLines="3"
                     android:padding="8dp"
-                    android:text="Photographic information:"
+                    android:text="@string/photo_info"
                     android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                     android:textColor="#444"
                     android:textSize="18sp"
@@ -145,7 +145,7 @@
                     android:layout_height="wrap_content"
                     android:maxLines="3"
                     android:padding="8dp"
-                    android:text="@{`Fstop: ` + viewmodel.image.formatFstop()}"
+                    android:text="@{@string/fstop(viewmodel.image.formatFstop()??@string/unknown_value)}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                     android:textColor="#444"
                     android:textSize="18sp"
@@ -161,7 +161,7 @@
                     android:layout_height="wrap_content"
                     android:maxLines="3"
                     android:padding="8dp"
-                    android:text="@{`Focal length: ` + viewmodel.image.formatFocalLength()}"
+                    android:text="@{@string/focal_length(viewmodel.image.formatFocalLength()??@string/unknown_value)}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                     android:textColor="#444"
                     android:textSize="18sp"
@@ -177,7 +177,7 @@
                     android:layout_height="wrap_content"
                     android:maxLines="3"
                     android:padding="8dp"
-                    android:text="@{`Iso: ` + viewmodel.image.formatISO()}"
+                    android:text="@{@string/iso(viewmodel.image.formatISO()??@string/unknown_value)}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                     android:textColor="#444"
                     android:textSize="18sp"
@@ -193,7 +193,7 @@
                     android:layout_height="wrap_content"
                     android:maxLines="3"
                     android:padding="8dp"
-                    android:text="@{`Shutter speed: ` + viewmodel.image.formatShutterSpeed()}"
+                    android:text="@{@string/shutter_speed(viewmodel.image.formatShutterSpeed()??@string/unknown_value)}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                     android:textColor="#444"
                     android:textSize="18sp"
