--- a/app/src/main/res/layout/gallery_fragment.xml
+++ b/app/src/main/res/layout/gallery_fragment.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="android.view.View"/>
         <variable
             name="adapterProvider"
             type="uk.ac.shef.com4510.support.databinding.RecyclerViewAdapterProvider" />
@@ -44,7 +45,8 @@
             app:backgroundTint="@color/colorAccent"
             app:fabSize="normal"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            android:visibility="@{viewModel.hasCamera?View.VISIBLE:View.INVISIBLE}"/>
 
         <include
             android:id="@+id/loading_more"
