--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -38,7 +38,7 @@
                     android:adjustViewBounds="true"
                     android:contentDescription="@string/selected_image"
                     android:scaleType="fitCenter"
-                    app:imageStatic="@{viewmodel.bitmap}"
+                    app:imageAsync="@{viewmodel.bitmap}"
                     app:layout_constraintTop_toTopOf="parent"/>
 
                 <fragment
