Added add description hint.

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -85,7 +85,7 @@
                     android:layout_height="wrap_content"
                     android:maxLines="3"
                     android:padding="8dp"
-                    android:text="@{`Title: ` + viewmodel.image.title}"
+                    android:text="@{@string/title_field(viewmodel.image.title)}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                     android:textColor="#444"
                     android:textSize="18sp"
@@ -100,7 +100,7 @@
                     android:layout_height="wrap_content"
                     android:maxLines="3"
                     android:padding="8dp"
-                    android:text="@{`Description: ` + viewmodel.image.description}"
+                    android:text="@{viewmodel.image.description!=null?@string/description_field(viewmodel.image.description):@string/add_description_hint}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                     android:textColor="#444"
                     android:textSize="18sp"
@@ -115,7 +115,7 @@
                     android:layout_height="wrap_content"
                     android:maxLines="3"
                     android:padding="8dp"
-                    android:text="@{`Date: ` + viewmodel.image.getDateString(dateFormatter)}"
+                    android:text="@{@string/date_field(viewmodel.image.getDateString(dateFormatter))}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                     android:textColor="#444"
                     android:textSize="18sp"
