--- a/app/src/main/res/layout/edit_details_fragment.xml
+++ b/app/src/main/res/layout/edit_details_fragment.xml
@@ -4,10 +4,10 @@
     <data>
         <variable
             name="viewmodel"
-            type="uk.ac.shef.com4510.details.EditDetailsViewModel"/>
+            type="uk.ac.shef.oak.com4510.details.EditDetailsViewModel"/>
         <variable
             name="actions"
-            type="uk.ac.shef.com4510.details.EditDetailsActions"/>
+            type="uk.ac.shef.oak.com4510.details.EditDetailsActions"/>
     </data>
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -92,7 +92,7 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toBottomOf="@id/descriptionInputLayout">
 
-                    <uk.ac.shef.com4510.widgets.TextInputDatePicker
+                    <uk.ac.shef.oak.com4510.widgets.TextInputDatePicker
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/date"
