--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/galleryFragment"
-        android:name="uk.ac.shef.com4510.gallery.GalleryFragment"
+        android:name="uk.ac.shef.oak.com4510.gallery.GalleryFragment"
         android:label="gallery_fragment"
         tools:layout="@layout/gallery_fragment">
         <action
@@ -25,7 +25,7 @@
     </fragment>
     <fragment
         android:id="@+id/searchFragment"
-        android:name="uk.ac.shef.com4510.search.SearchFragment"
+        android:name="uk.ac.shef.oak.com4510.search.SearchFragment"
         android:label="SearchFragment">
         <action
             android:id="@+id/action_searchFragment_to_galleryFragment"
@@ -33,7 +33,7 @@
     </fragment>
     <fragment
         android:id="@+id/mapFragment"
-        android:name="uk.ac.shef.com4510.map.MapFragment"
+        android:name="uk.ac.shef.oak.com4510.map.MapFragment"
         android:label="MapFragment">
         <action
             android:id="@+id/action_mapFragment_to_detailsActivity"
@@ -44,12 +44,12 @@
     </fragment>
     <activity
         android:id="@+id/cameraActivity"
-        android:name="uk.ac.shef.com4510.camera.CameraActivity"
+        android:name="uk.ac.shef.oak.com4510.camera.CameraActivity"
         android:label="CameraActivity"
         app:action="cameraAction" />
     <activity
         android:id="@+id/detailsActivity"
-        android:name="uk.ac.shef.com4510.details.DetailsActivity"
+        android:name="uk.ac.shef.oak.com4510.details.DetailsActivity"
         android:label="activity_details"
         app:action="detailsAction"
         tools:layout="@layout/activity_details">
